--- a/index.html
+++ b/index.html
@@ -74,12 +74,24 @@
           <!-- caniuse.com 검색 -->
           <nav class="nav">
             <ul class="gnb">
-              <li><a href="#">ABOUT US</a></li>
-              <li><a href="#">제휴문의</a></li>
-              <li><a href="#">도시락멤버스</a></li>
-              <li><a href="#">와이파이도시락</a></li>
-              <li><a href="#">도시락유심</a></li>
-              <li><a href="#">도시락eSIM</a></li>
+              <li>
+                <a href="#"><span>ABOUT US</span></a>
+              </li>
+              <li>
+                <a href="#"><span>제휴문의</span></a>
+              </li>
+              <li>
+                <a href="#"><span>도시락멤버스</span></a>
+              </li>
+              <li>
+                <a href="#"><span>와이파이도시락</span></a>
+              </li>
+              <li>
+                <a href="#"><span>도시락유심</span></a>
+              </li>
+              <li>
+                <a href="#"><span>도시락eSIM</span></a>
+              </li>
             </ul>
           </nav>
         </div>
