--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://d01.wifidosirak.com/tong/images/common/favicon.png">
     <title>도시락으로 다 통한다, 해외 데이터는 도시락통</title>
     <!-- SEO 셋팅 -->
     <meta name="title" content="도시락으로 다 통한다, 해외데이터는 도시락통">
@@ -25,6 +26,9 @@
     <meta name="twitter:title" content="도시락으로 다 통한다, 해외 데이터는 도시락통">
     <meta name="twitter:description" content="도시락으로 다 통한다, 해외 데이터는 도시락통! 와이파이도시락, 도시락유심, 도시락eSIM을모두 담은 도시락통">
     <meta name="format-detection" content="telephone=no">
+    <!-- aos -->
+    <link rel="stylesheet" href="js/aos/aos.css">
+    <script src="js/aos/aos.js"></script>
     <!-- Swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
@@ -143,17 +147,50 @@
         <!--// 비주얼 -->
         <!-- 서비스 -->
         <section class="service">
-            <div class="inner"></div>
+            <div class="inner">
+                <h2><span>도시락통</span> 서비스 둘러보기</h2>
+                <div class="service-contents">
+                    <div class="service-left">
+                        <a href="#" class="service-link-1" data-aos="fade-right" data-aos-duration="500" data-aos-delay="100">왼쪽</a>
+                    </div>
+                    <div class="service-right">
+                        <a href="#" class="service-link-2" data-aos="fade-left" data-aos-duration="500" data-aos-delay="100">상단</a>
+                        <a href="#" class="service-link-3" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">하단</a>
+                    </div>
+                </div>
+            </div>
         </section>
         <!--// 서비스 -->
         <!-- 정보 -->
         <section class="info">
-            <div class="inner"></div>
+            <div class="inner">
+                <div class="info-contents">
+                    <div class="info-left"></div>
+                    <div class="info-right"></div>
+                </div>
+            </div>
         </section>
         <!--// 정보 -->
         <!-- 서비스 카테고리 -->
         <section class="category">
-            <div class="inner"></div>
+            <!-- Swiper -->
+            <div class="swiper swcategory">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <a href="#" class="category-link clink-1">내용</a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="category-link clink-2">내용</a>
+                    </div>
+                    <div class="swiper-slide">
+                        <a href="#" class="category-link clink-3">내용</a>
+                    </div>
+                </div>
+            </div>
+            <!-- 안내창 -->
+            <div class="category-pop">
+                <img src="images/scroll_guide2.png" alt="카테고리">
+            </div>
         </section>
         <!--// 서비스메뉴 -->
         <!-- 하단 -->
