--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <meta name="twitter:title" content="도시락으로 다 통한다, 해외 데이터는 도시락통">
     <meta name="twitter:description" content="도시락으로 다 통한다, 해외 데이터는 도시락통! 와이파이도시락, 도시락유심, 도시락eSIM을모두 담은 도시락통">
     <meta name="format-detection" content="telephone=no">
+    <!-- waypoint -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
+        integrity="sha512-fHXRw0CXruAoINU11+hgqYvY/PcsOWzmj0QmcSOtjlJcqITbPyypc8cYpidjPurWpCnlB8VKfRwx6PIpASCUkQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- aos -->
     <link rel="stylesheet" href="js/aos/aos.css">
     <script src="js/aos/aos.js"></script>
@@ -51,6 +55,8 @@
 </head>
 
 <body>
+    <!-- 위로가기 -->
+    <button class="gotop">위로가기</button>
     <!-- 메인 레이아웃 용도 : 관례 -->
     <div class="wrap">
         <!-- 상단  -->
@@ -151,11 +157,14 @@
                 <h2><span>도시락통</span> 서비스 둘러보기</h2>
                 <div class="service-contents">
                     <div class="service-left">
-                        <a href="#" class="service-link-1" data-aos="fade-right" data-aos-duration="500" data-aos-delay="100">왼쪽</a>
+                        <a href="#" class="service-link-1" data-aos="fade-right" data-aos-duration="500"
+                            data-aos-delay="100">왼쪽</a>
                     </div>
                     <div class="service-right">
-                        <a href="#" class="service-link-2" data-aos="fade-left" data-aos-duration="500" data-aos-delay="100">상단</a>
-                        <a href="#" class="service-link-3" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">하단</a>
+                        <a href="#" class="service-link-2" data-aos="fade-left" data-aos-duration="500"
+                            data-aos-delay="200">상단</a>
+                        <a href="#" class="service-link-3" data-aos="fade-up" data-aos-duration="500"
+                            data-aos-delay="300">하단</a>
                     </div>
                 </div>
             </div>
