--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 
 <body>
     <!-- 위로가기 -->
-    <button class="gotop">위로가기</button>
+    <button class="gotop">
+        <i class="topIcon xi-long-arrow-up"></i>
+    </button>
     <!-- 메인 레이아웃 용도 : 관례 -->
     <div class="wrap">
         <!-- 상단  -->
