--- a/index.html
+++ b/index.html
@@ -231,8 +231,14 @@
                 src="../images/main_service_img1.jpg"
               />
               <div class="service-left-textWrap">
-                <div>와이파이도시락</div>
-                <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                <div class="serviceName">와이파이도시락</div>
+                <p class="serviceInfo">
+                  최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!
+                </p>
+                <p class="serviceMore">
+                  바로가기
+                  <i class="xi-angle-right-min"></i>
+                </p>
               </div>
             </div>
             <div class="service-right">
@@ -246,8 +252,14 @@
                   src="../images/main_service_img2.jpg"
                 />
                 <div class="service-right-top-textWrap">
-                  <div>와이파이도시락</div>
-                  <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                  <div class="serviceName">도시락유심</div>
+                  <p class="serviceInfo">
+                    별도 단말기 소지 없이 유심 교체로 간편한 해외 데이터 사용
+                  </p>
+                  <p class="serviceMore">
+                    바로가기
+                    <i class="xi-angle-right-min"></i>
+                  </p>
                 </div>
               </div>
               <div class="service-right-bottom">
@@ -260,8 +272,14 @@
                   src="../images/main_service_img3.jpg"
                 />
                 <div class="service-right-bottom-textWrap">
-                  <div>와이파이도시락</div>
-                  <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                  <div class="serviceName">도시락eSIM</div>
+                  <p class="serviceInfo">
+                    해외 데이터 사용 손쉽게 구매부터 QR 설치까지 온라인으로 끝!
+                  </p>
+                  <p class="serviceMore">
+                    바로가기
+                    <i class="xi-angle-right-min"></i>
+                  </p>
                 </div>
               </div>
             </div>
@@ -306,13 +324,37 @@
         <div class="swiper swcategory">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <a href="#" class="category-link clink-1">내용</a>
+              <a href="#" class="category-link clink-1">
+                <p class="category-link-title">도시락멤버스</p>
+                <p class="category-link-content">
+                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
+                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
+                  확인해보세요!
+                </p>
+                <div class="category-link-more">READ MORE</div>
+              </a>
             </div>
             <div class="swiper-slide">
-              <a href="#" class="category-link clink-2">내용</a>
+              <a href="#" class="category-link clink-2"
+                ><p class="category-link-title">도시락멤버스</p>
+                <p class="category-link-content">
+                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
+                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
+                  확인해보세요!
+                </p>
+                <div class="category-link-more">READ MORE</div>
+              </a>
             </div>
             <div class="swiper-slide">
-              <a href="#" class="category-link clink-3">내용</a>
+              <a href="#" class="category-link clink-3"
+                ><p class="category-link-title">도시락멤버스</p>
+                <p class="category-link-content">
+                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
+                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
+                  확인해보세요!
+                </p>
+                <div class="category-link-more">READ MORE</div>
+              </a>
             </div>
           </div>
         </div>
@@ -324,7 +366,22 @@
       <!--// 서비스메뉴 -->
       <!-- 하단 -->
       <footer class="footer">
-        <div class="inner"></div>
+        <div class="inner">
+          <div class="footerContent">
+            <div class="footerInfo">
+              <p class="footerInfo-item">상호 : ㈜와이드모바일</p>
+              <p class="footerInfo-item">대표 : 김만중</p>
+              <p class="footerInfo-item">통신판매업신고번호 : 제2018-서울서대문-0301호</p>
+              <p class="footerInfo-item">사업자등록번호 : 121-81-66458</p>
+            </div>
+            <p class="footerService">
+              고객센터 : <a href="#" class="telLink">1566-9070 </a>(운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)
+            </p>
+            <p class="copy">
+              Copyright © WIDEMOBILE INC. Allright Reserved.
+            </p>
+          </div>
+        </div>
       </footer>
       <!--// 하단 -->
     </div>
