--- a/index.html
+++ b/index.html
@@ -336,22 +336,18 @@
             </div>
             <div class="swiper-slide">
               <a href="#" class="category-link clink-2"
-                ><p class="category-link-title">도시락멤버스</p>
+                ><p class="category-link-title">도시락톡</p>
                 <p class="category-link-content">
-                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
-                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
-                  확인해보세요!
+                  로밍전화 요금 부담을 확 낮춰주는<br />해외로밍전화 앱 서비스.<br />도시락톡끼리는 365일 무료통화 혜택까지!
                 </p>
                 <div class="category-link-more">READ MORE</div>
               </a>
             </div>
             <div class="swiper-slide">
               <a href="#" class="category-link clink-3"
-                ><p class="category-link-title">도시락멤버스</p>
+                ><p class="category-link-title">여행보험도시락</p>
                 <p class="category-link-content">
-                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
-                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
-                  확인해보세요!
+                  방문국가, 나이 입력하고 보험료 미리보기<br />커피 두 세잔 값으로 보험료는 가볍게,<br />보장은 든든하게!
                 </p>
                 <div class="category-link-more">READ MORE</div>
               </a>
@@ -373,7 +369,7 @@
               <p class="footerInfo-item">대표 : 김만중</p>
               <p class="footerInfo-item">통신판매업신고번호 : 제2018-서울서대문-0301호</p>
               <p class="footerInfo-item">사업자등록번호 : 121-81-66458</p>
-            </div>
+            </div
             <p class="footerService">
               고객센터 : <a href="#" class="telLink">1566-9070 </a>(운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)
             </p>
