--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- favicon -->
     <link
       rel="shortcut icon"
       href="https://d01.wifidosirak.com/tong/images/common/favicon.png"
     />
+
+    <!-- SEO(검색 엔진 최적화) 셋팅 -->
     <title>도시락으로 다 통한다, 해외 데이터는 도시락통</title>
-    <!-- SEO 셋팅 -->
+
     <meta name="title" content="도시락으로 다 통한다, 해외데이터는 도시락통" />
     <meta
       name="keywords"
@@ -41,6 +45,7 @@
     />
     <meta property="og:url" content="https://www.dosiraktong.com" />
     <link rel="canonical" href="https://www.dosiraktong.com" />
+
     <!-- Twitter -->
     <meta
       name="twitter:title"
@@ -50,7 +55,7 @@
       name="twitter:description"
       content="도시락으로 다 통한다, 해외 데이터는 도시락통! 와이파이도시락, 도시락유심, 도시락eSIM을모두 담은 도시락통"
     />
-    <meta name="format-detection" content="telephone=no" />
+
     <!-- waypoint -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"
@@ -58,50 +63,53 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+
     <!-- aos -->
     <link rel="stylesheet" href="js/aos/aos.css" />
     <script src="js/aos/aos.js"></script>
+
     <!-- Swiper -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <!-- xeiocn -->
+
+    <!-- XEIcon -->
     <link
       rel="stylesheet"
       href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"
     />
+
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/style.css" />
+
     <!-- JS -->
+
     <!-- html5 태그 지원 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
     <![endif]-->
-    <!-- CSS3 지원 -->
-    <script src="js/prefixfree.min.js"></script>
+    <!-- CSS3 지원 (자동 밴더프리픽스)-->
+    <script defer src="js/prefixfree.min.js"></script>
     <!-- Viewport 지원 -->
-    <script src="js/respond.min.js"></script>
-    <!-- 사용자 스크립트 -->
-    <script src="js/script.js"></script>
+    <script defer src="js/respond.min.js"></script>
+    <!-- 사용자 script -->
+    <script defer src="js/script.js"></script>
   </head>
 
   <body>
-    <!-- 위로가기 -->
     <button class="gotop">
-      <i class="topIcon xi-long-arrow-up"></i>
+      <i class="xi-long-arrow-up"></i>
     </button>
-    <!-- 메인 레이아웃 용도 : 관례 -->
+    <!-- main layout -->
     <div class="wrap">
-      <!-- 상단  -->
+      <!-- top ** -->
       <header class="header">
-        <!-- 데스크탑  -->
+        <!-- desktop menu -->
         <div class="inner">
-          <!-- 로고는 a 태그로 마무리 -->
           <a href="index.html" class="logo"></a>
-          <!-- caniuse.com 검색 -->
+          <!-- caniuse.com 검색하여 태그 사용 -->
           <nav class="nav">
             <ul class="gnb">
               <li>
@@ -130,7 +138,7 @@
             </button>
           </nav>
         </div>
-        <!-- 모바일 메뉴 -->
+        <!-- mobile menu -->
         <nav class="mb-nav">
           <ul class="mb-nav-gnb">
             <li>
@@ -154,13 +162,14 @@
           </ul>
         </nav>
       </header>
-      <!--// 상단  -->
-      <!-- 비주얼 -->
+      <!-- ** top -->
+
+      <!-- visual ** -->
       <section class="visual">
-        <!-- 
-                Swiper  
-                <div class="swiper 사용자지정클래스"></div>
-                swiper : 클래스는 Swiper 기본형 제어 css
+        <!-- Swiper -->
+        <!--
+                <div class="swiper 사용자지정명"></div>
+                swiper 클래스는 Swiper 기본형 제어 CSS
                 사용자지정클래스(swvisual) : js 및 css 추가
             -->
         <div class="swiper swvisual">
@@ -180,10 +189,8 @@
               <div class="visual-img bg-4"></div>
             </div>
           </div>
-
-          <!-- 슬라이드의 콘트롤러 -->
+          <!-- 슬라이드 컨트롤러(별도로 배치하는 것을 추천함) -->
           <div class="swvisual-control">
-            <!-- margin: 0 auto; 중앙에 배치 -->
             <div class="inner">
               <!-- 좌측/우측 이동버튼 -->
               <button class="swvisual-prev">
@@ -192,164 +199,175 @@
               <button class="swvisual-next">
                 <i class="xi-angle-right"></i>
               </button>
-              <!-- 슬라이드 타이틀 -->
-              <h2 class="swvisual-title">도시락유심</h2>
-              <!-- 슬라이드 설명글 -->
-              <p class="swvisual-txt">
-                도시락으로 다 통한다, 해외데이터는 도시락통
-              </p>
+              <!-- 슬라이드 title -->
+              <h2 class="swvisual-title"></h2>
+              <!-- 슬라이드 txt -->
+              <p class="swvisual-txt"></p>
               <div class="swvisual-link">
-                <a href="#">자세히보기<i class="xi-long-arrow-right"></i></a>
+                <a href="#">
+                  자세히 보기
+                  <i class="xi-long-arrow-right"></i>
+                </a>
               </div>
               <!-- 네비게이션 -->
               <div class="swvisual-navi">
-                <ul class="swvisual-list">
+                <ul class="swvisual-list swiper-pagination">
                   <!-- js 코드 html 삽입 -->
-                  <!-- <li>1</li>
-                                <li>2</li>
-                                <li>3</li>
-                                <li>4</li> -->
                 </ul>
               </div>
             </div>
           </div>
         </div>
       </section>
-      <!--// 비주얼 -->
-      <!-- 서비스 -->
+      <!-- ** visual -->
+
+      <!-- service ** -->
       <section class="service">
         <div class="inner">
           <h2><span>도시락통</span> 서비스 둘러보기</h2>
           <div class="service-contents">
             <div class="service-left">
-              <img
+              <a
                 href="#"
-                class="service-link-1"
+                class="service-link service-link-1"
                 data-aos="fade-right"
                 data-aos-duration="500"
                 data-aos-delay="100"
-                src="../images/main_service_img1.jpg"
-              />
-              <div class="service-left-textWrap">
-                <div class="serviceName">와이파이도시락</div>
-                <p class="serviceInfo">
-                  최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!
-                </p>
-                <p class="serviceMore">
-                  바로가기
-                  <i class="xi-angle-right-min"></i>
-                </p>
-              </div>
+              >
+                <div class="service-link-container">
+                  <h3>와이파이도시락</h3>
+                  <p>최대 5대 동시접속, 대용량 데이터로 해외에서도 빵빵!</p>
+                  <span>
+                    바로가기
+                    <i class="xi-angle-right"></i>
+                  </span>
+                </div>
+              </a>
             </div>
             <div class="service-right">
-              <div class="service-right-top">
-                <img
-                  href="#"
-                  class="service-link-2"
-                  data-aos="fade-left"
-                  data-aos-duration="500"
-                  data-aos-delay="200"
-                  src="../images/main_service_img2.jpg"
-                />
-                <div class="service-right-top-textWrap">
-                  <div class="serviceName">도시락유심</div>
-                  <p class="serviceInfo">
+              <a
+                href="#"
+                class="service-link service-link-2"
+                data-aos="fade-left"
+                data-aos-duration="500"
+                data-aos-delay="200"
+              >
+                <div class="service-link-container">
+                  <h3>도시락유심</h3>
+                  <p>
                     별도 단말기 소지 없이 유심 교체로 간편한 해외 데이터 사용
                   </p>
-                  <p class="serviceMore">
+                  <span>
                     바로가기
-                    <i class="xi-angle-right-min"></i>
-                  </p>
+                    <i class="xi-angle-right"></i>
+                  </span>
                 </div>
-              </div>
-              <div class="service-right-bottom">
-                <img
-                  href="#"
-                  class="service-link-3"
-                  data-aos="fade-up"
-                  data-aos-duration="500"
-                  data-aos-delay="300"
-                  src="../images/main_service_img3.jpg"
-                />
-                <div class="service-right-bottom-textWrap">
-                  <div class="serviceName">도시락eSIM</div>
-                  <p class="serviceInfo">
+              </a>
+              <a
+                href="#"
+                class="service-link service-link-3"
+                data-aos="fade-up"
+                data-aos-duration="500"
+                data-aos-delay="300"
+              >
+                <div class="service-link-container">
+                  <h3>도시락eSIM</h3>
+                  <p>
                     해외 데이터 사용 손쉽게 구매부터 QR 설치까지 온라인으로 끝!
                   </p>
-                  <p class="serviceMore">
+                  <span>
                     바로가기
-                    <i class="xi-angle-right-min"></i>
-                  </p>
+                    <i class="xi-angle-right"></i>
+                  </span>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
       </section>
-      <!--// 서비스 -->
-      <!-- 정보 -->
+      <!-- ** service -->
+
+      <!-- info ** -->
       <section class="info">
         <div class="inner">
           <div class="info-contents">
             <div class="info-left">
-              통신 서비스를 하나로<br />해외여행 갈 땐 <span>도시락통.</span>
+              <h2>
+                통신 서비스를 하나로<br />
+                해외여행 갈 땐 <span>도시락통.</span>
+              </h2>
             </div>
             <div class="info-right">
-              <div class="info-right-title">
-                혼자서 갑자기 훌쩍 떠나는 여행도 <br />오랜만에 온 가족이
-                함께하는 여행도 <br /><span>도시락 하나면 든든</span>해요.
-              </div>
-              <div class="info-right-content">
-                <p>
-                  국내외 어디서나 끊김없이 든든한 네트워크 제공하자는 모토를
-                  가지고 2004년, <br />(주)와이드모바일은 설립되었습니다.
-                </p>
-                <p>
-                  더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도
-                  편리하고 즐거운 여행의 파트너가 되겠습니다.
-                </p>
-                <a href="#">
-                  ABOUT US
-                  <i class="aboutIcon xi-long-arrow-right"></i>
-                </a>
-              </div>
+              <h4>
+                혼자서 갑자기 훌쩍 떠나는 여행도<br />
+                오랜만에 온 가족이 함께하는 여행도<br />
+                <span>도시락 하나면 든든</span>해요.
+              </h4>
+              <p class="info-txt info-txt1">
+                국내외 어디서나 끊김없이 든든한 네트워크 제공하자는 모토를
+                가지고 2004년,
+                <br />
+                (주)와이드모바일은 설립되었습니다.
+              </p>
+              <p class="info-txt info-txt2">
+                더 나은 서비스 제공을 위해 지속적으로 연구, 개발하여 앞으로도
+                편리하고 즐거운 여행의 파트너가 되겠습니다.
+              </p>
+              <a href="#" class="info-about">
+                <span>ABOUT US</span>
+                <i class="xi-long-arrow-right"></i>
+              </a>
             </div>
           </div>
         </div>
       </section>
-      <!--// 정보 -->
-      <!-- 서비스 카테고리 -->
+      <!-- **info -->
+
+      <!-- service category ** -->
       <section class="category">
         <!-- Swiper -->
         <div class="swiper swcategory">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <a href="#" class="category-link clink-1">
-                <p class="category-link-title">도시락멤버스</p>
-                <p class="category-link-content">
-                  하나의 ID로 도시락통의 모든 서비스를<br />이용할 수 있는
-                  통합멤버십.<br />이용 할 수록 커지는 커지는 혜택을
-                  확인해보세요!
+                <h3>도시락멤버스</h3>
+                <p>
+                  하나의 ID로 도시락통의 모든 서비스를
+                  <br class="width480" />
+                  이용할 수 있는 통합멤버십.
+                  <br />
+                  이용할수록 커지는 혜택을 확인해 보세요!
                 </p>
-                <div class="category-link-more">READ MORE</div>
+                <span> READ MORE </span>
+                <img src="images/main_banner_figure1.png" alt="" />
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="#" class="category-link clink-2"
-                ><p class="category-link-title">도시락톡</p>
-                <p class="category-link-content">
-                  로밍전화 요금 부담을 확 낮춰주는<br />해외로밍전화 앱 서비스.<br />도시락톡끼리는 365일 무료통화 혜택까지!
+              <a href="#" class="category-link clink-2">
+                <h3>도시락톡</h3>
+                <p>
+                  로밍전화 요금 부담을 확 낮춰주는
+                  <br class="width480" />
+                  해외로밍전화 앱 서비스.
+                  <br />
+                  도시락톡끼리는 365일 무료통화 혜택까지!
                 </p>
-                <div class="category-link-more">READ MORE</div>
+                <span> READ MORE </span>
+                <img src="images/main_banner_figure2.png" alt="" />
               </a>
             </div>
             <div class="swiper-slide">
-              <a href="#" class="category-link clink-3"
-                ><p class="category-link-title">여행보험도시락</p>
-                <p class="category-link-content">
-                  방문국가, 나이 입력하고 보험료 미리보기<br />커피 두 세잔 값으로 보험료는 가볍게,<br />보장은 든든하게!
+              <a href="#" class="category-link clink-3">
+                <h3>여행보험도시락</h3>
+                <p>
+                  방문국가, 나이 입력하고 보험료 미리보기
+                  <br class="width480" />
+                  커피 두 세잔 값으로 보험료는 가볍게,
+                  <br class="width480" />
+                  보장은 든든하게!
                 </p>
-                <div class="category-link-more">READ MORE</div>
+                <span> READ MORE </span>
+                <img src="images/main_banner_figure3.png" alt="" />
               </a>
             </div>
           </div>
@@ -359,27 +377,31 @@
           <img src="images/scroll_guide2.png" alt="카테고리" />
         </div>
       </section>
-      <!--// 서비스메뉴 -->
-      <!-- 하단 -->
+      <!-- ** service category -->
+
+      <!-- footer ** -->
       <footer class="footer">
         <div class="inner">
-          <div class="footerContent">
-            <div class="footerInfo">
-              <p class="footerInfo-item">상호 : ㈜와이드모바일</p>
-              <p class="footerInfo-item">대표 : 김만중</p>
-              <p class="footerInfo-item">통신판매업신고번호 : 제2018-서울서대문-0301호</p>
-              <p class="footerInfo-item">사업자등록번호 : 121-81-66458</p>
-            </div
-            <p class="footerService">
-              고객센터 : <a href="#" class="telLink">1566-9070 </a>(운영시간 9:00~18:00, 주말/공휴일/점심 12:00~13:00 제외)
-            </p>
-            <p class="copy">
-              Copyright © WIDEMOBILE INC. Allright Reserved.
-            </p>
-          </div>
+          <ul class="footer-list">
+            <li>상호 : ㈜와이드모바일</li>
+            <li>대표 : 김만중</li>
+            <li>통신판매업신고번호 : 제2018-서울서대문-0301호</li>
+            <li>사업자등록번호 : 121-81-66458</li>
+          </ul>
+          <p class="footer-service">
+            고객센터 : <a href="#">1566-9070</a>
+            <br class="width640" />
+            (운영시간 9:00~18:00,
+            <br class="width640" />
+            주말/공휴일/점심 12:00~13:00 제외)
+          </p>
+          <p class="footer-copyright">
+            Copyright © WIDEMOBILE INC. Allright Reserved.
+          </p>
         </div>
       </footer>
-      <!--// 하단 -->
+      <!-- ** footer -->
     </div>
   </body>
+  <link rel="stylesheet" href="css/style.css" />
 </html>
